--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
 
     <section class="main-content">
-         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"><input type="hidden" name="cmd" value="_s-xclick"> <input type="hidden" name="hosted_button_id" value="EYKPS39AY5DWE"> <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> </form>
+         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"><input type="hidden" name="cmd" value="_s-xclick"> <input type="hidden" name="hosted_button_id" value="EYKPS39AY5DWE"> <input type="image" src="https://goo.gl/photos/NFecqmWqwdv8L777A" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> </form>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/nupurpatel/Shikha-s-Glory">Shikha&#39;s Glory</a> is maintained by <a href="https://github.com/nupurpatel">nupurpatel</a>.</span>
