--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Shikha&#39;s Glory</h1>
       <h2 class="project-tagline">Jewelry store with clothing and accessories</h2>
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top"><input type="hidden" name="cmd" value="_s-xclick"> <input type="hidden" name="hosted_button_id" value="EYKPS39AY5DWE"> <input type="image" src="https://lh3.googleusercontent.com/V0u46uEs1Dv4XJTi00ZdkA2yqBHU7pDN1xuQSa5OeW-JionrOAFut6RkLqZYmHEdOvqcR3tlV4YzOvTTOhpnpJ6zjWEstYygOwvd0yd8AFcCQHZNAdmmLtlY4ci-LbAuAOLUSfSPY9Y7QftQbJ_yjEl_SovE8-WRQiAqldrsnx_eiYqHdt35u2mB8MNOxxs0S3Y87ip0ZcAbph_6uADx8f4Wr7H_S0IaXgVN0z_P7f79HANyDQr0W1IeY3b5TBW10VgStGdDmChxrONO-_HO4qEaOuqs5nMo9T9J8FuVGlD6g0xPLSps2OkISDQ1RXyD3KGgHYK4oF_ucpYOMBmG35ZuD5p61eIAArwGUJ0lkUiK39rjn36N_fERQUGik_i4xBsunvVdTSbkrkdzImO1OBhNtMQfHhN5jJnNcAH8BN51mpMV7NHMnUqPidNrvNuMnK3gehyXjZnuDuJra9hrc9TzE_e2_Pm-8S_Z4iPeYOnugeKCWKKwvgjdVPmsy0lgFkF-DhNlO2V-hM7VpN2eYn5gSaHQa3K45I8mkFbtx-9Z4v5_EpdoXCKmcJM0WXRhMBSjd35AQIxefqvIOkZFLCKcI1TDmKOjzbobU56J3KZ_sitUYw=w1016-h571-no-tmp.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> </form>
     
     </section>
 
