--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
 
     <section class="main-content">
     
+
+    [1.1]: http://i.imgur.com/tXSoThF.png (twitter icon with padding)
+    [2.1]: http://i.imgur.com/P3YfQoD.png (facebook icon with padding)
+    [3.1]: http://i.imgur.com/yCsTjba.png (google plus icon with padding)
+    [4.1]: http://i.imgur.com/YckIOms.png (tumblr icon with padding)
+    [5.1]: http://i.imgur.com/1AGmwO3.png (dribbble icon with padding)
+    [6.1]: http://i.imgur.com/0o48UoR.png (github icon with padding)
+
+    [1]: http://www.twitter.com/carlsednaoui
+    [2]: http://www.facebook.com/sednaoui
+    [3]: https://plus.google.com/+CarlSednaoui
+    [4]: http://carlsed.tumblr.com
+    [5]: http://dribbble.com/carlsednaoui
+    [6]: http://www.github.com/carlsednaoui
+
+    <!-- Please don't remove this: Grab your social icons from https://github.com/carlsednaoui/gitsocial -->
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/nupurpatel/Shikha-s-Glory">Shikha&#39;s Glory</a> is maintained by <a href="https://github.com/nupurpatel">nupurpatel</a>.</span>
       
