--- a/index.html
+++ b/index.html
@@ -22,23 +22,24 @@
     </section>
 
     <section class="main-content">
-    
-
-    [1.1]: http://i.imgur.com/tXSoThF.png (twitter icon with padding)
-    [2.1]: http://i.imgur.com/P3YfQoD.png (facebook icon with padding)
-    [3.1]: http://i.imgur.com/yCsTjba.png (google plus icon with padding)
-    [4.1]: http://i.imgur.com/YckIOms.png (tumblr icon with padding)
-    [5.1]: http://i.imgur.com/1AGmwO3.png (dribbble icon with padding)
-    [6.1]: http://i.imgur.com/0o48UoR.png (github icon with padding)
-
-    [1]: http://www.twitter.com/carlsednaoui
-    [2]: http://www.facebook.com/sednaoui
-    [3]: https://plus.google.com/+CarlSednaoui
-    [4]: http://carlsed.tumblr.com
-    [5]: http://dribbble.com/carlsednaoui
-    [6]: http://www.github.com/carlsednaoui
-
-    <!-- Please don't remove this: Grab your social icons from https://github.com/carlsednaoui/gitsocial -->
+    <div class="a2a_kit a2a_kit_size_32 a2a_default_style a2a_follow">
+    <a class="a2a_button_twitter" data-a2a-follow="AddToAny"></a>
+    <a class="a2a_button_facebook" data-a2a-follow="AddToAny"></a>
+    <a class="a2a_button_instagram" data-a2a-follow="kevin"></a>
+    <a class="a2a_button_pinterest" data-a2a-follow="Pinterest"></a>
+    <a class="a2a_button_google_plus" data-a2a-follow="+google"></a>
+    <a class="a2a_button_linkedin" data-a2a-follow="reidhoffman"></a>
+    <a class="a2a_button_linkedin_company" data-a2a-follow="linkedin"></a>
+    <a class="a2a_button_vimeo" data-a2a-follow="staff"></a>
+    <a class="a2a_button_youtube" data-a2a-follow="YouTube"></a>
+    <a class="a2a_button_youtube_channel" data-a2a-follow="UCF0pVplsI8R5kcAqgtoRqoA"></a>
+    <a class="a2a_button_tumblr" data-a2a-follow="staff"></a>
+    <a class="a2a_button_github" data-a2a-follow="torvalds"></a>
+    <a class="a2a_button_foursquare" data-a2a-follow="dens"></a>
+    <a class="a2a_button_snapchat" data-a2a-follow="teamsnapchat"></a>
+    <a class="a2a_button_behance" data-a2a-follow="Adobe"></a>
+    <a class="a2a_button_flickr" data-a2a-follow="flickr"></a>
+</div>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/nupurpatel/Shikha-s-Glory">Shikha&#39;s Glory</a> is maintained by <a href="https://github.com/nupurpatel">nupurpatel</a>.</span>
       
