--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Shikha&#39;s Glory</h1>
-      <h2 class="project-tagline">A collection of adorable jewelry, clothing and accessories!</h2>
+      <h2 class="project-tagline">Indian jewelry and clothing store!</h2>
       
     </section>
     <section class="main-content">
