--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
      
       </form>
     </section>
-
-    </section>
-  <iframe width="420" height="315"
+    <div class="center">
+     <iframe width="420" height="315"
 src="https://www.youtube.com/embed/tgbNymZ7vqY">
 </iframe>
-  </section>
-  
+
+    </div>
   </body>
 </html>
